fixed buttons overflowing in mobile

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,7 @@ footer p {
     width: 24rem;
   }
   .button {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
+    padding: 0.8rem 1.8rem;
   }
 }
